Add JS and CSS for test on Github.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Test</title>
+    <link href="index.css" type="text/css" rel="stylesheet">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    Test page
+    <p>Test page</p>
 </body>
 </html>
