--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <p>Test page</p>
+    <p>Test page for AJAX</p>
+    <a href="/blog">My blog demo</a>
 </body>
 </html>
